force-app/main/default/objects/Wealth360_API_Config__mdt/Wealth360_API_Config__mdt.object-meta.xml
<CustomObject>
    <label>Wealth360 API Config</label>
    <pluralLabel>Wealth360 API Configs</pluralLabel>
    <description>Configuration for external API integrations used by Wealth360 application</description>
</CustomObject>