force-app/main/default/objects/Wealth360_API_Config__mdt/fields/Holdings_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Holdings_Endpoint__c</fullName>
    <label>Holdings Endpoint</label>
    <description>API endpoint path for fetching holdings (use {portfolioId} as placeholder)</description>
    <length>255</length>
    <type>Text</type>
</CustomField>