force-app/main/default/objects/Wealth360_API_Config__mdt/fields/Lookback_Days__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Days__c</fullName>
    <label>Lookback Days</label>
    <description>Number of days to look back for transaction history</description>
    <defaultValue>90</defaultValue>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>