force-app/main/default/objects/Wealth360_API_Config__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <description>Name of the Named Credential to use for API callouts</description>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>