force-app/main/default/objects/Wealth360_API_Config__mdt/fields/Portfolios_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Portfolios_Endpoint__c</fullName>
    <label>Portfolios Endpoint</label>
    <description>API endpoint path for fetching portfolios</description>
    <length>255</length>
    <type>Text</type>
</CustomField>