force-app/main/default/objects/Wealth360_API_Config__mdt/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <label>Retry Count</label>
    <description>Number of times to retry failed API calls</description>
    <defaultValue>3</defaultValue>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>