force-app/main/default/objects/Wealth360_API_Config__mdt/fields/Timeout_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Milliseconds__c</fullName>
    <label>Timeout Milliseconds</label>
    <description>HTTP timeout in milliseconds for API callouts</description>
    <defaultValue>120000</defaultValue>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>