force-app/main/default/objects/Wealth360_API_Config__mdt/fields/Transactions_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Transactions_Endpoint__c</fullName>
    <label>Transactions Endpoint</label>
    <description>API endpoint path for fetching transactions (use {portfolioId} as placeholder)</description>
    <length>255</length>
    <type>Text</type>
</CustomField>